# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  README.md  catalog.json  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: auth.py  db.py  llm.py  main.py  nda_chat.py  schemas.py
backend/app/documents/: api.py  chat.py  registry.py  render.py  router.py  schema.py  store.py  templates.py
backend/tests/: conftest.py  test_auth.py  test_documents_chat.py  test_documents_field_merge.py  test_documents_render.py  test_nda_chat.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/generate-pdf/: route.ts
frontend/src/components/: DocumentChatPanel.tsx  DocumentCreatorPage.tsx  DocumentPreview.tsx  LoginScreen.tsx  NDAChatPanel.tsx  NDADocument.tsx  NDAForm.tsx  NdaCreatorPage.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
frontend/src/lib/: postJson.ts
frontend/src/lib/auth/: api.test.ts  api.ts  session.test.ts  session.ts  types.ts
frontend/src/lib/documents/: api.test.ts  api.ts  types.ts
frontend/src/lib/nda/: chatApi.test.ts  chatApi.ts  defaults.ts  renderDocument.ts  resolve.ts  standardTerms.ts  types.ts
frontend/src/styles/: document.css  nda-document.css
scripts/: start-mac.sh  start-windows.ps1  stop-windows.ps1
templates/: LICENSE.md
